--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "rss-to-discord",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "npx dotenvx run -- tsc",
+    "start": "npx dotenvx run -- node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
