fix: exclude options for tsc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "noImplicitAny": true,
     "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/local", "node_modules", "dist"]
 }
