--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npx dotenvx run -- tsc",
+    "bundle": "esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js --minify",
+    "zip:bundle": "zip -j rss-lambda-bot.zip dist/index.js",
     "start": "npx dotenvx run -- node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,9 +17,14 @@
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.48.4",
     "@types/node": "^24.3.0",
+    "esbuild": "^0.25.9",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.879.0",
+    "@aws-sdk/client-ssm": "^3.879.0",
+    "@aws-sdk/lib-dynamodb": "^3.879.0",
+    "node-fetch": "^3.3.2",
     "rss-parser": "^3.13.0"
   }
 }
